fixed styles and alignment

--- a/src/components/BrandScroller.css
+++ b/src/components/BrandScroller.css
@@ -1,6 +1,5 @@
 .brand-cont{
   background-color: white;
-  padding: 5px;
 }
 .brand-container {
     display: flex;
